[package]
name = "mamoru-sniffer-go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "z"
strip = true
lto = true

[dependencies]
#mamoru-sniffer-c = {path = "../mamoru-core/mamoru-sniffer-c"}
mamoru-sniffer-c = {git = "https://github.com/Mamoru-Foundation/mamoru-core", rev = "468f81daf0627d12d8498a6a7e150857d6ba5c87"}
