[package]
name = "mamoru-sniffer-go"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "z"
strip = true
lto = true

[dependencies]
#mamoru-sniffer-c = {path = "../mamoru-core/mamoru-sniffer-c"}
mamoru-sniffer-c = {git = "https://github.com/Mamoru-Foundation/mamoru-core", rev = "dba0778262434d715e139666a443550ee9993aae"}
